discussion/kv_engine/176433/176433_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Make range-scan parameters runtime configurable

Add "set" paths for changing the runtime value of

* range_scan_max_continue_tasks
* range_scan_max_lifetime
* range_scan_read_buffer_send_size

These are deliberately not documented in cbepctl

Change-Id: I578ba6dd35fe6859667468473a53159445d9e167

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-06-23 12:19:02.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-23 12:43:47.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47001/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/ep_engine.cc(838): error C2039: "setRangeScanMaxLifetime": is not a member of "Configuration" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47001/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18257/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_engine.cc:838:27: error: no member named "setRangeScanMaxLifetime" in "Configuration" [clang-diagnostic-error]
            configuration.setRangeScanMaxLifetime(std::stoull(val));
                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1507:5: error: constructor for "RangeScanOwnerTest" must explicitly initialize the member "readyScans" which does not have a default constructor [clang-diagnostic-error]
    RangeScanOwnerTest() : rangeScans(&readyScans) {
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1519:21: note: member is declared here
    ReadyRangeScans readyScans;
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_owner.h:36:7: note: "ReadyRangeScans" declared here
class ReadyRangeScans {
      ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unique_ptr.h:962:34: error: no matching constructor for initialization of "DummyRangeScanHandler" [clang-diagnostic-error]
    { return unique_ptr<_Tp>(new _Tp(std::forward<_Args>(__args)...)); }
                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1414:34: note: in instantiation of function template specialization "std::make_unique<DummyRangeScanHandler>" requested here
                            std::make_unique<DummyRangeScanHandler>());
                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1222:5: note: candidate constructor not viable: requires single argument "callbackCounter", but no arguments were provided
    DummyRangeScanHandler(size_t& callbackCounter)
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1220:7: note: candidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 0 were provided
class DummyRangeScanHandler : public RangeScanDataHandlerIFace {
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1220:7: note: candidate constructor (the implicit move constructor) not viable: requires 1 argument, but 0 were provided

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18257/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_engine.cc:838:27:
error: no member named "setRangeScanMaxLifetime" in "Configuration" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18257/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39477/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/ep_engine.cc:838:27:
error: no member named "setRangeScanMaxLifetime" in "Configuration"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39477/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8028/ : FAILURE

Compile error at [2022-06-23T12:24:58.407Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/ep_engine.cc:838:27:
error: ?class Configuration? has no member named ?setRangeScanMaxLifetime?; did you mean ?getRangeScanMaxLifetime??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8028/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19342/ : FAILURE

Compile error at [2022-06-23T12:24:46.999Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/ep_engine.cc:838:27:
error: no member named "setRangeScanMaxLifetime" in "Configuration"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19342/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7926/ : FAILURE

Compile error at [2022-06-23T12:32:32.087Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/ep_engine.cc:838:27:
error: no member named "setRangeScanMaxLifetime" in "Configuration"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7926/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20123/ : FAILURE

Compile error at [2022-06-23T12:34:47.092Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/ep_engine.cc:838:27:
error: ?class Configuration? has no member named ?setRangeScanMaxLifetime?; did you mean ?getRangeScanMaxLifetime??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20123/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20470/ : FAILURE

Compile error at [2022-06-23T12:40:36.065Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/ep_engine.cc:838:27:
error: ?class Configuration? has no member named ?setRangeScanMaxLifetime?; did you mean ?getRangeScanMaxLifetime??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20470/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28504/ : FAILURE

Compile error at [2022-06-23T12:42:59.139Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/ep_engine.cc:838:27:
error: no member named "setRangeScanMaxLifetime" in "Configuration"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28504/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21119/ : FAILURE

Compile error at [2022-06-23T12:37:14.577Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/ep_engine.cc:838:27:
error: no member named "setRangeScanMaxLifetime" in "Configuration"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21119/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17380/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
